CMLC#isInExpectedState consistency problem
Fixes: #3063 

* change stream to for loops, prevent `ConcurrentModificationException` from simultaneously invoking `KafkaMessageListenerContainer#setStoppedNormally` and `CMLC#isInExpectedState`
* modify property isInExpectedState when invoking stream.allMatch. This was causing list size to change and thus 
   throwing `ConcurrentModificationException` by `ArrayList$ArrayListSpliterator#tryAdvance`.

**Auto-cherry-pick to `3.1.x`**